--- a/upload/admin/view/template/marketplace/task_list.twig
+++ b/upload/admin/view/template/marketplace/task_list.twig
@@ -6,29 +6,36 @@
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
           <th>{{ column_code }}</th>
           <th>{{ column_action }}</th>
-          <th class="text-end">{{ column_sort_order }}</th>
+          <th>{{ column_args }}</th>
+          <th>{{ column_date_added }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
       <tbody>
         {% if tasks %}
           {% for task in tasks %}
-            <tr{% if not task.status %} class="table-disabled"{% endif %}>
+            <tr>
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ task.task_id }}" class="form-check-input"/></td>
               <td>{{ task.code }}</td>
               <td>{{ task.action }}</td>
-              <td class="text-end">{{ task.sort_order }}</td>
+              <td>{{ task.args }}</td>
+              <td class="text-end">{{ task.date_added }}</td>
               <td class="text-end text-nowrap">
-                {% if not task.status %}
-                  <button type="button" value="{{ task.enable }}" data-bs-toggle="tooltip" title="{{ button_enable }}" class="btn btn-success"><i class="fa-solid fa-plus-circle"></i></button>
+
+                {% if task.description %}
+                  <button type="button" data-bs-toggle="modal" data-bs-target="#modal-cron-{{ task.task_id }}" class="btn btn-info"><i class="fa-solid fa-info-circle"></i></button>
                 {% else %}
-                  <button type="button" value="{{ task.disable }}" data-bs-toggle="tooltip" title="{{ button_disable }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></button>
-                {% endif %}</td>
+                  <button type="button" class="btn btn-info" disabled><i class="fa-solid fa-info-circle"></i></button>
+                {% endif %}
+
+              </td>
             </tr>
+
+
           {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="5">{{ text_no_results }}</td>
+            <td class="text-center" colspan="6">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
@@ -38,4 +45,4 @@
     <div class="col-sm-6 text-start">{{ pagination }}</div>
     <div class="col-sm-6 text-end">{{ results }}</div>
   </div>
-</form
+</form>
