--- a/upload/admin/view/template/tool/menu_form.twig
+++ b/upload/admin/view/template/tool/menu_form.twig
@@ -62,7 +62,7 @@
                   {% endfor %}
                 {% endfor %}
               </select>
-              <div id="error-path" class="invalid-feedback"></div>
+              <div id="error-parent" class="invalid-feedback"></div>
             </div>
           </div>
           <div class="row mb-3">
