--- a/upload/admin/view/template/extension/dashboard.twig
+++ b/upload/admin/view/template/extension/dashboard.twig
@@ -7,6 +7,7 @@
         <tr>
           <th>{{ column_name }}</th>
           <th class="text-end">{{ column_width }}</th>
+          <th class="text-center">{{ column_status }}</th>
           <th class="text-end">{{ column_sort_order }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
@@ -17,21 +18,24 @@
             <tr{% if not extension.installed %} class="table-disabled"{% endif %}>
               <td>{{ extension.name }}</td>
               <td class="text-end">{{ extension.width }}</td>
+              <td class="text-center">{% if extension.status %}
+                  <span class="badge bg-success">{{ text_enabled }}</span>
+                {% else %}
+                  <span class="badge bg-danger">{{ text_disabled }}</span>
+                {% endif %}</td>
               <td class="text-end">{{ extension.sort_order }}</td>
-              <td class="text-end text-nowrap">
-              {% if extension.installed %}
-                <a href="{{ extension.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not extension.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a>
+              <td class="text-end text-nowrap">{% if extension.installed %}
+                <a href="{{ extension.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a>
                 <a href="{{ extension.uninstall }}" data-bs-toggle="tooltip" title="{{ button_uninstall }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></a>
               {% else %}
-                <button type="button" class="btn btn-secondary" disabled="disabled"><i class="fa-solid fa-pencil"></i></button>
+                <button type="button" class="btn btn-primary disabled"><i class="fa-solid fa-pencil"></i></button>
                 <a href="{{ extension.install }}" data-bs-toggle="tooltip" title="{{ button_install }}" class="btn btn-success"><i class="fa-solid fa-plus-circle"></i></a>
-              {% endif %}
-              </td>
+              {% endif %}</td>
             </tr>
           {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="4">{{ text_no_results }}</td>
+            <td class="text-center" colspan="5">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
