--- a/upload/admin/view/template/localisation/zone_list.twig
+++ b/upload/admin/view/template/localisation/zone_list.twig
@@ -24,7 +24,7 @@
                 {% else %}
                   <span class="badge bg-danger">{{ text_disabled }}</span>
                 {% endif %}</td>
-              <td class="text-end text-nowrap"><a href="{{ zone.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not zone.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-end text-nowrap"><a href="{{ zone.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
