--- a/upload/admin/view/template/marketing/affiliate_list.twig
+++ b/upload/admin/view/template/marketing/affiliate_list.twig
@@ -8,6 +8,7 @@
           <th class="d-none d-lg-table-cell"><a href="{{ sort_tracking }}"{% if sort == 'ca.tracking' %} class="{{ order|lower }}"{% endif %}>{{ column_tracking }}</a></th>
           <th class="text-end"><a href="{{ sort_commission }}"{% if sort == 'ca.commission' %} class="{{ order|lower }}"{% endif %}>{{ column_commission }}</a></th>
           <th class="text-end"><a href="{{ sort_balance }}"{% if sort == 'ca.balance' %} class="{{ order|lower }}"{% endif %}>{{ column_balance }}</a></th>
+          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'ca.status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
           <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'ca.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
@@ -21,8 +22,13 @@
               <td class="d-none d-lg-table-cell">{{ affiliate.tracking }}</td>
               <td class="text-end">{{ affiliate.commission }}</td>
               <td class="text-end d-none d-lg-table-cell"><x-currency code="{{ currency }}" amount="{{ affiliate.balance }}"></x-currency></td>
+              <td class="text-center">{% if affiliate.status %}
+                  <span class="badge bg-success">{{ text_enabled }}</span>
+                {% else %}
+                  <span class="badge bg-danger">{{ text_disabled }}</span>
+                {% endif %}</td>
               <td class="d-none d-lg-table-cell">{{ affiliate.date_added }}</td>
-              <td class="text-end text-nowrap"><a href="{{ affiliate.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not affiliate.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-end text-nowrap"><a href="{{ affiliate.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
