--- a/upload/admin/view/template/user/user_list.twig
+++ b/upload/admin/view/template/user/user_list.twig
@@ -8,6 +8,7 @@
           <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
           <th><a href="{{ sort_email }}"{% if sort == 'u.email' %} class="{{ order|lower }}"{% endif %}>{{ column_email }}</a></th>
           <th><a href="{{ sort_user_group }}"{% if sort == 'user_group' %} class="{{ order|lower }}"{% endif %}>{{ column_user_group }}</a></th>
+          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
           <th class="d-none d-lg-table-cell"><a href="{{ sort_date_added }}"{% if sort == 'u.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
@@ -21,8 +22,13 @@
               <td>{{ user.name }}</td>
               <td>{{ user.email }}</td>
               <td>{{ user.user_group }}</td>
+              <td class="text-center">{% if user.status %}
+                  <span class="badge bg-success">{{ text_enabled }}</span>
+                {% else %}
+                  <span class="badge bg-danger">{{ text_disabled }}</span>
+                {% endif %}</td>
               <td class="d-none d-lg-table-cell">{{ user.date_added }}</td>
-              <td class="text-end text-nowrap"><a href="{{ user.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not user.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-end text-nowrap"><a href="{{ user.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
