--- a/upload/admin/view/template/localisation/currency_list.twig
+++ b/upload/admin/view/template/localisation/currency_list.twig
@@ -26,7 +26,7 @@
                   <span class="badge bg-danger">{{ text_disabled }}</span>
                 {% endif %}</td>
               <td class="d-none d-lg-table-cell">{{ currency.date_modified }}</td>
-              <td class="text-end text-nowrap"><a href="{{ currency.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not currency.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-end text-nowrap"><a href="{{ currency.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
