--- a/upload/admin/view/template/extension/theme.twig
+++ b/upload/admin/view/template/extension/theme.twig
@@ -6,6 +6,7 @@
       <thead>
         <tr>
           <th>{{ column_name }}</th>
+          <th class="text-center">{{ column_status }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
@@ -14,26 +15,32 @@
           {% for extension in extensions %}
             <tr>
               <td><b>{{ extension.name }}</b></td>
+              <td></td>
               <td class="text-end">
-              {% if not extension.installed %}
-                <a href="{{ extension.install }}" data-bs-toggle="tooltip" title="{{ button_install }}" class="btn btn-success"><i class="fa-solid fa-plus-circle"></i></a>
-              {% else %}
-                <a href="{{ extension.uninstall }}" data-bs-toggle="tooltip" title="{{ button_uninstall }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></a>
-              {% endif %}
+                {% if not extension.installed %}
+                  <a href="{{ extension.install }}" data-bs-toggle="tooltip" title="{{ button_install }}" class="btn btn-success"><i class="fa-solid fa-plus-circle"></i></a>
+                {% else %}
+                  <a href="{{ extension.uninstall }}" data-bs-toggle="tooltip" title="{{ button_uninstall }}" class="btn btn-danger"><i class="fa-solid fa-minus-circle"></i></a>
+                {% endif %}
               </td>
             </tr>
             {% if extension.installed %}
               {% for store in extension.store %}
                 <tr{% if not store.status %} class="table-disabled"{% endif %}>
                   <td>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;{{ store.name }}</td>
-                  <td class="text-end text-nowrap"><a href="{{ store.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not store.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a></td>
+                  <td class="text-center">{% if extension.status %}
+                      <span class="badge bg-success">{{ text_enabled }}</span>
+                    {% else %}
+                      <span class="badge bg-danger">{{ text_disabled }}</span>
+                    {% endif %}</td>
+                  <td class="text-end text-nowrap"><a href="{{ store.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
                 </tr>
               {% endfor %}
             {% endif %}
           {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="2">{{ text_no_results }}</td>
+            <td class="text-center" colspan="3">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
