--- a/upload/admin/view/template/extension/other.twig
+++ b/upload/admin/view/template/extension/other.twig
@@ -6,7 +6,7 @@
       <thead>
         <tr>
           <th>{{ column_name }}</th>
-
+          <th class="text-center">{{ column_status }}</th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
@@ -33,7 +33,7 @@
           {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="2">{{ text_no_results }}</td>
+            <td class="text-center" colspan="3">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
